--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,5 +5,6 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: $background;
 }
