--- a/src/styles/error.module.scss
+++ b/src/styles/error.module.scss
@@ -3,12 +3,16 @@
 .notif {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    margin: 10px auto;
+    grid-row-start: 1;
+    margin: 10px;
     width: 50%;
+    max-width: 600px;
+    max-height: 50px;
     border: 3px solid $darkGray;
     border-radius: 10px;
     .errorText {
         color: $white;
+        margin: 15px;
         grid-column-start: 2;
         text-transform: uppercase;
         font-weight: bold;
